# solana

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
app/: index.html  llms.txt  skill.md
demo/: .env.example  agent.ts  autonomous-buyer.ts  autonomous-seller.ts  autonomous-setup.ts  create-examples.ts  create-long.ts  create-reject.ts  examples.json  llm.ts  run.ts
docs/: ARCHITECTURE.md  DEMO_SCENARIO.md  INSTRUCTIONS.md  PROTOCOL_SPEC.md  RESEARCH.md
programs/haggle/: Cargo.toml
programs/haggle/src/: errors.rs  events.rs  lib.rs  state.rs
programs/haggle/src/instructions/: accept.rs  accept_inv.rs  close.rs  create.rs  expire.rs  mod.rs  offer.rs  reject.rs
sdk/: haggle.ts  index.ts  types.ts  utils.ts
tests/: haggle.test.ts
