[package]
name = "haggle"
version = "0.1.0"
description = "Haggle Protocol - On-chain negotiation for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "haggle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
